# update-segment-functions

./: README.md  action.yaml  action.yml  index.js  package-lock.json  package.json  pyproject.toml  segment-functions-config-sample.yaml
example/: segment_functions_configs.yaml
example/sample_function/: function_settings.yaml  index.js
example_function/: function-settings-example.yaml  my_function_settings.yaml
src/: github_actions_utils.py  main.py  segment.py  utils.py
tests/: test_main.py  test_utils.py
update_segment_functions/: github_actions_utils.py  main.py  segment.py  utils.py
