[project]
name = "update-segment-functions"
version = "0.1.0"
description = "Automatically update Segment functions based on file changes"
dependencies = [
    "pyyaml",
    "requests",
    "certifi",
    "pip-system-certs",
]
requires-python = ">=3.8"

[project.scripts]
update-segment-functions = "update_segment_functions.main:main"
